# python-spacetraders

./: .gitignore  README.md  openapi-client.yml  pyproject.toml
openapi-client-template/: client.py.jinja  endpoint_macros.py.jinja  endpoint_module.py.jinja  model.py.jinja  model_property.py.jinja  package_init.py.jinja  types.py.jinja
openapi-client-template/property_templates/: model_property.py.jinja
spacetraders/: __init__.py  client.py  types.py
spacetraders/models/: __init__.py  accept_contract_response_200.py  accept_contract_response_200_data.py  activity_level.py  agent.py  chart.py  connected_system.py  construction.py  construction_material.py  contract.py  contract_deliver_good.py  contract_payment.py  contract_terms.py  contract_type.py  cooldown.py  create_chart_response_201.py  create_chart_response_201_data.py  create_ship_ship_scan_response_201.py  create_ship_ship_scan_response_201_data.py  create_ship_system_scan_response_201.py  create_ship_system_scan_response_201_data.py  create_ship_waypoint_scan_response_201.py  create_ship_waypoint_scan_response_201_data.py  create_survey_response_201.py  create_survey_response_201_data.py  deliver_contract_json_body.py  deliver_contract_response_200.py  deliver_contract_response_200_data.py  dock_ship_dock_ship_200_response.py  dock_ship_dock_ship_200_response_data.py  extract_resources_json_body.py  extract_resources_response_201.py  extract_resources_response_201_data.py  extract_resources_with_survey_response_201.py  extract_resources_with_survey_response_201_data.py  extraction.py  extraction_yield.py  (+164 more)
(+51 files in other folders)
